WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70613
[Qt][WK2] WebView does not get focus when being clicked / touched in MiniBrowser.
https://bugs.webkit.org/show_bug.cgi?id=70613
Summary
[Qt][WK2] WebView does not get focus when being clicked / touched in MiniBrow...
Zeno Albisser
Reported
2011-10-21 09:25:47 PDT
This happens only when a WebView is being used together with a TextInput field or any other similar item that grabs the focus. Once the focus is being taken by the TextInput field it will never be given back to the WebView.
Attachments
patch for review.
(2.39 KB, patch)
2011-10-21 09:34 PDT
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-10-21 09:34:12 PDT
Created
attachment 111976
[details]
patch for review.
Simon Hausmann
Comment 2
2011-10-24 02:12:31 PDT
Comment on
attachment 111976
[details]
patch for review. r=me This seems consistent with QQuickTextEdit/Input, which also forces the active focus on mouse press events.
WebKit Review Bot
Comment 3
2011-10-24 02:26:00 PDT
Comment on
attachment 111976
[details]
patch for review. Clearing flags on attachment: 111976 Committed
r98226
: <
http://trac.webkit.org/changeset/98226
>
WebKit Review Bot
Comment 4
2011-10-24 02:26:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug