[Qt][WK2] WebView does not get focus when being clicked / touched in MiniBrowser. https://bugs.webkit.org/show_bug.cgi?id=70613

Make TouchWebView and DesktopWebView take the focus whenever it receives
a MouseClick or a TouchEvent.

Patch by Zeno Albisser <zeno.albisser@nokia.com> on 2011-10-24
Reviewed by Simon Hausmann.

* UIProcess/API/qt/qdesktopwebview.cpp:
(QDesktopWebView::mousePressEvent):
* UIProcess/API/qt/qtouchwebview.cpp:
(QTouchWebView::touchEvent):
* UIProcess/API/qt/qtouchwebview.h:

Canonical link: https://commits.webkit.org/86903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98226 268f45cc-cd09-0410-ab3c-d52691b4dbfc